Fixed redeem box being too wide

--- a/wwwroot/styles/style.css
+++ b/wwwroot/styles/style.css
@@ -21,7 +21,9 @@ input {
     font-size: 11px;
     font-family: Verdana, Arial, Helvetica, sans-serif;
 }
-
+input#redeem-code {
+    width:250px;
+}
 hr {
     border: 0;
     color: black;
